--- a/.github/workflows/snyk_scan.yml
+++ b/.github/workflows/snyk_scan.yml
@@ -7,7 +7,11 @@ jobs:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with: 
           command: code test
+          args: --sarif-file-output=snyk.sarif
+      - name: Print the Snyk sarif file
+        run : cat snyk.sarif
